examples/ingress.server-snippet.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-webserver
  labels:
    helm.sh/chart: webserver-0.1.0
    app.kubernetes.io/name: webserver
    app.kubernetes.io/instance: web
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      large_client_header_buffers     32 128k;
spec:
  rules:
    - host: "www.olive-steel.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: web-webserver
              servicePort: 80
